Initial PARTIAL WIP port to NEO 1.21.4.